스크롤뷰 추가

--- a/myPractice/myPractice/Base.lproj/Main.storyboard
+++ b/myPractice/myPractice/Base.lproj/Main.storyboard
@@ -322,6 +322,38 @@
             </objects>
             <point key="canvasLocation" x="2269.5999999999999" y="892.80359820089961"/>
         </scene>
+        <!--Scroll ViewVC-->
+        <scene sceneID="tZg-bg-R7p">
+            <objects>
+                <viewController storyboardIdentifier="ScrollViewVC" id="uNY-n4-cfy" customClass="ScrollViewVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hqb-kn-Lqv"/>
+                        <viewControllerLayoutGuide type="bottom" id="66Y-gY-W8J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nHt-DN-5CV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xN9-rr-hVI">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xN9-rr-hVI" secondAttribute="trailing" id="TtD-IX-Aub"/>
+                            <constraint firstItem="xN9-rr-hVI" firstAttribute="leading" secondItem="nHt-DN-5CV" secondAttribute="leading" id="fe6-VY-7sb"/>
+                            <constraint firstItem="xN9-rr-hVI" firstAttribute="top" secondItem="nHt-DN-5CV" secondAttribute="top" id="mH9-Ny-dU8"/>
+                            <constraint firstItem="66Y-gY-W8J" firstAttribute="top" secondItem="xN9-rr-hVI" secondAttribute="bottom" id="qrl-b0-1kG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="xN9-rr-hVI" id="pj0-1H-mjT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kqn-Ai-Zmt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-468" y="1698.8005997001501"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="Ncs-NZ-wDG">
             <objects>
